# WoiWidgets

./: CMakeLists.txt  LICENSE  README.md  WoiCustomWindow.cpp  WoiCustomWindow.h  main.cpp
core/: Icons.cpp  Icons.h  WoiThemeEngine.cpp  WoiThemeEngine.h
core/style/: WoiStyle.cpp  WoiStyle.h  WoiStyleUtility.cpp  WoiStyleUtility.h
core/style/widgets/: WoiStyleButtons.cpp  WoiStyleButtons.h  WoiStyleMenu.cpp  WoiStyleMenu.h  WoiStyleTabBar.cpp  WoiStyleTabBar.h  WoiTooltip.cpp  WoiTooltip.h
resources/woi_dark/: dark.qss  index.theme  palette.css
resources/woi_light/: index.theme
src/: THEME_COMPONENT_GUIDE.md
src/core/: Icons.cpp  Icons.h  ResizePreview.cpp  ResizePreview.h  ShadowOverlayWindow.cpp  ShadowOverlayWindow.h  WoiMacros.h  WoiWindowFrame.cpp  WoiWindowFrame.h
src/core/style/: WoiThemeEngine.cpp  WoiThemeEngine.h  WoiThemeWidget.cpp  WoiThemeWidget.h
src/widgets/: WoiPushButton.cpp  WoiPushButton.h  WoiTitleBar.cpp  WoiTitleBar.h  WoiTitleBarButton.cpp  WoiTitleBarButton.h
